[gd_scene load_steps=18 format=2]

[ext_resource path="res://scratch_animator.gd" type="Script" id=1]
[ext_resource path="res://draw/fill.tscn" type="PackedScene" id=2]
[ext_resource path="res://draw/out_line.tscn" type="PackedScene" id=3]
[ext_resource path="res://icons/Onion.svg" type="Texture" id=4]
[ext_resource path="res://icons/TransitionEnd.png" type="Texture" id=5]
[ext_resource path="res://draw/drawing-background.png" type="Texture" id=6]
[ext_resource path="res://icons/Play.png" type="Texture" id=7]
[ext_resource path="res://icons/undo.png" type="Texture" id=8]
[ext_resource path="res://icons/redo.png" type="Texture" id=9]
[ext_resource path="res://icons/Add.png" type="Texture" id=10]
[ext_resource path="res://icons/Duplicate.png" type="Texture" id=11]
[ext_resource path="res://draw/sketch_line.tscn" type="PackedScene" id=12]
[ext_resource path="res://scratch_canvas/canvas.tscn" type="PackedScene" id=13]

[sub_resource type="ButtonGroup" id=3]

[sub_resource type="ShortCut" id=5]

[sub_resource type="InputEventKey" id=1]
scancode = 65
unicode = 65

[sub_resource type="ShortCut" id=2]
shortcut = SubResource( 1 )

[node name="ScratchAnimator" type="PanelContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="HBoxContainer" type="HBoxContainer" parent="."]
margin_left = 7.0
margin_top = 7.0
margin_right = 505.0
margin_bottom = 385.0
size_flags_vertical = 3

[node name="ToolBar" type="VBoxContainer" parent="HBoxContainer"]
margin_right = 28.0
margin_bottom = 378.0

[node name="Settings" type="Button" parent="HBoxContainer/ToolBar"]
margin_right = 28.0
margin_bottom = 20.0
text = "S"

[node name="HSeparator3" type="HSeparator" parent="HBoxContainer/ToolBar"]
margin_top = 24.0
margin_right = 28.0
margin_bottom = 28.0

[node name="OutLineLayer" type="Button" parent="HBoxContainer/ToolBar"]
margin_top = 32.0
margin_right = 28.0
margin_bottom = 52.0
toggle_mode = true
pressed = true
group = SubResource( 3 )
text = "O"

[node name="FillLayer" type="Button" parent="HBoxContainer/ToolBar"]
margin_top = 56.0
margin_right = 28.0
margin_bottom = 76.0
toggle_mode = true
group = SubResource( 3 )
text = "F"

[node name="ColorPickerButton" type="ColorPickerButton" parent="HBoxContainer/ToolBar"]
margin_top = 80.0
margin_right = 28.0
margin_bottom = 100.0

[node name="SketchLayer" type="Button" parent="HBoxContainer/ToolBar"]
margin_top = 104.0
margin_right = 28.0
margin_bottom = 126.0
toggle_mode = true
group = SubResource( 3 )
icon = ExtResource( 4 )

[node name="SketchVisible" type="CheckBox" parent="HBoxContainer/ToolBar"]
margin_top = 130.0
margin_right = 28.0
margin_bottom = 154.0
pressed = true

[node name="OnionSkinDepth" type="VSlider" parent="HBoxContainer/ToolBar"]
margin_top = 158.0
margin_right = 28.0
margin_bottom = 222.0
rect_min_size = Vector2( 0, 64 )
size_flags_horizontal = 1
min_value = -4.0
max_value = 4.0

[node name="HSeparator" type="HSeparator" parent="HBoxContainer/ToolBar"]
margin_top = 226.0
margin_right = 28.0
margin_bottom = 230.0

[node name="Undo" type="Button" parent="HBoxContainer/ToolBar"]
margin_top = 234.0
margin_right = 28.0
margin_bottom = 256.0
icon = ExtResource( 8 )

[node name="Redo" type="Button" parent="HBoxContainer/ToolBar"]
margin_top = 260.0
margin_right = 28.0
margin_bottom = 282.0
icon = ExtResource( 9 )

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer"]
margin_left = 32.0
margin_right = 498.0
margin_bottom = 378.0
size_flags_horizontal = 3

[node name="FrameTabs" type="Tabs" parent="HBoxContainer/VBoxContainer"]
unique_name_in_owner = true
margin_right = 466.0
margin_bottom = 24.0
size_flags_horizontal = 3
tab_align = 0
tab_close_display_policy = 1
drag_to_rearrange_enabled = true

[node name="PanelContainer" type="PanelContainer" parent="HBoxContainer/VBoxContainer"]
margin_top = 28.0
margin_right = 466.0
margin_bottom = 350.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="ScrollContainer" type="ScrollContainer" parent="HBoxContainer/VBoxContainer/PanelContainer"]
margin_left = 7.0
margin_top = 7.0
margin_right = 459.0
margin_bottom = 315.0

[node name="CenterContainer" type="CenterContainer" parent="HBoxContainer/VBoxContainer/PanelContainer/ScrollContainer"]
margin_right = 452.0
margin_bottom = 308.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Canvas" parent="HBoxContainer/VBoxContainer/PanelContainer/ScrollContainer/CenterContainer" instance=ExtResource( 13 )]
unique_name_in_owner = true
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 452.0
margin_bottom = 308.0
rect_min_size = Vector2( 452, 308 )
size_flags_horizontal = 3
size_flags_vertical = 3
texture_normal = ExtResource( 6 )
stretch_mode = 1
lines = [ ExtResource( 3 ), ExtResource( 2 ), ExtResource( 12 ) ]

[node name="HBoxContainer" type="HBoxContainer" parent="HBoxContainer/VBoxContainer"]
margin_top = 354.0
margin_right = 466.0
margin_bottom = 378.0

[node name="Play" type="Button" parent="HBoxContainer/VBoxContainer/HBoxContainer"]
margin_right = 28.0
margin_bottom = 24.0
icon = ExtResource( 7 )

[node name="Duplicate" type="Button" parent="HBoxContainer/VBoxContainer/HBoxContainer"]
margin_left = 32.0
margin_right = 60.0
margin_bottom = 24.0
icon = ExtResource( 11 )

[node name="Next" type="Button" parent="HBoxContainer/VBoxContainer/HBoxContainer"]
margin_left = 64.0
margin_right = 92.0
margin_bottom = 24.0
shortcut = SubResource( 5 )
icon = ExtResource( 5 )

[node name="Add" type="Button" parent="HBoxContainer/VBoxContainer/HBoxContainer"]
margin_left = 96.0
margin_right = 124.0
margin_bottom = 24.0
shortcut = SubResource( 2 )
icon = ExtResource( 10 )

[node name="Previous" type="Button" parent="HBoxContainer/VBoxContainer/HBoxContainer"]
visible = false
margin_left = 64.0
margin_right = 84.0
margin_bottom = 22.0
text = "P"

[node name="FrameSlider" type="HSlider" parent="HBoxContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
margin_left = 128.0
margin_right = 406.0
margin_bottom = 16.0
size_flags_horizontal = 3
max_value = 0.0
tick_count = 1
ticks_on_borders = true

[node name="Loop" type="CheckBox" parent="HBoxContainer/VBoxContainer/HBoxContainer"]
margin_left = 410.0
margin_right = 466.0
margin_bottom = 24.0
text = "loop"

[node name="FrameTimer" type="Timer" parent="."]
wait_time = 0.125

[node name="FreeFrameConfirmationDialog" type="ConfirmationDialog" parent="."]
margin_right = 200.0
margin_bottom = 70.0
window_title = "Please Confirm deleting current frame"
dialog_text = "You want to delete current frame? It will not be undo-able."

[node name="SettingsConfirmationDialog" type="ConfirmationDialog" parent="."]
margin_right = 200.0
margin_bottom = 70.0
window_title = "Please Confirm Settings"

[node name="ResizeConfirmationDialog" type="ConfirmationDialog" parent="."]
margin_right = 200.0
margin_bottom = 70.0
dialog_text = "Your draw area has been resized! Do you want to expand your canvas to its area(x size, y size)?"

[node name="CapturesDialog" type="ConfirmationDialog" parent="."]
margin_left = 7.0
margin_top = 7.0
margin_right = 505.0
margin_bottom = 385.0
window_title = "Export?"

[node name="VBoxContainer" type="VBoxContainer" parent="CapturesDialog"]
margin_left = 8.0
margin_top = 8.0
margin_right = 490.0
margin_bottom = 342.0

[node name="GridContainer" type="GridContainer" parent="CapturesDialog/VBoxContainer"]
margin_left = 7.0
margin_top = 7.0
margin_right = 489.0
margin_bottom = 341.0
columns = 5

[node name="TextureRect" type="TextureRect" parent="CapturesDialog/VBoxContainer/GridContainer"]

[node name="TextureRect2" type="TextureRect" parent="CapturesDialog/VBoxContainer/GridContainer"]
margin_left = 4.0
margin_right = 4.0

[node name="TextureRect3" type="TextureRect" parent="CapturesDialog/VBoxContainer/GridContainer"]
margin_left = 8.0
margin_right = 8.0

[node name="TextureRect4" type="TextureRect" parent="CapturesDialog/VBoxContainer/GridContainer"]
margin_left = 12.0
margin_right = 12.0

[node name="TextureRect5" type="TextureRect" parent="CapturesDialog/VBoxContainer/GridContainer"]
margin_left = 16.0
margin_right = 16.0

[node name="TextureRect6" type="TextureRect" parent="CapturesDialog/VBoxContainer/GridContainer"]
margin_top = 4.0
margin_bottom = 4.0

[node name="TextureRect7" type="TextureRect" parent="CapturesDialog/VBoxContainer/GridContainer"]
margin_left = 4.0
margin_top = 4.0
margin_right = 4.0
margin_bottom = 4.0

[node name="TextureRect8" type="TextureRect" parent="CapturesDialog/VBoxContainer/GridContainer"]
margin_left = 8.0
margin_top = 4.0
margin_right = 8.0
margin_bottom = 4.0

[node name="TextureRect9" type="TextureRect" parent="CapturesDialog/VBoxContainer/GridContainer"]
margin_left = 12.0
margin_top = 4.0
margin_right = 12.0
margin_bottom = 4.0

[node name="TextureRect10" type="TextureRect" parent="CapturesDialog/VBoxContainer/GridContainer"]
margin_left = 16.0
margin_top = 4.0
margin_right = 16.0
margin_bottom = 4.0

[node name="TextureRect11" type="TextureRect" parent="CapturesDialog/VBoxContainer/GridContainer"]
margin_top = 8.0
margin_bottom = 8.0

[node name="TextureRect12" type="TextureRect" parent="CapturesDialog/VBoxContainer/GridContainer"]
margin_left = 4.0
margin_top = 8.0
margin_right = 4.0
margin_bottom = 8.0

[node name="TextureRect13" type="TextureRect" parent="CapturesDialog/VBoxContainer/GridContainer"]
margin_left = 8.0
margin_top = 8.0
margin_right = 8.0
margin_bottom = 8.0

[node name="TextureRect14" type="TextureRect" parent="CapturesDialog/VBoxContainer/GridContainer"]
margin_left = 12.0
margin_top = 8.0
margin_right = 12.0
margin_bottom = 8.0

[node name="TextureRect15" type="TextureRect" parent="CapturesDialog/VBoxContainer/GridContainer"]
margin_left = 16.0
margin_top = 8.0
margin_right = 16.0
margin_bottom = 8.0

[node name="TextureRect16" type="TextureRect" parent="CapturesDialog/VBoxContainer/GridContainer"]
margin_top = 12.0
margin_bottom = 12.0

[node name="TextureRect17" type="TextureRect" parent="CapturesDialog/VBoxContainer/GridContainer"]
margin_left = 4.0
margin_top = 12.0
margin_right = 4.0
margin_bottom = 12.0

[node name="TextureRect18" type="TextureRect" parent="CapturesDialog/VBoxContainer/GridContainer"]
margin_left = 8.0
margin_top = 12.0
margin_right = 8.0
margin_bottom = 12.0

[node name="TextureRect19" type="TextureRect" parent="CapturesDialog/VBoxContainer/GridContainer"]
margin_left = 12.0
margin_top = 12.0
margin_right = 12.0
margin_bottom = 12.0

[node name="TextureRect20" type="TextureRect" parent="CapturesDialog/VBoxContainer/GridContainer"]
margin_left = 16.0
margin_top = 12.0
margin_right = 16.0
margin_bottom = 12.0

[node name="TextureRect21" type="TextureRect" parent="CapturesDialog/VBoxContainer/GridContainer"]
margin_top = 16.0
margin_bottom = 16.0

[node name="TextureRect22" type="TextureRect" parent="CapturesDialog/VBoxContainer/GridContainer"]
margin_left = 4.0
margin_top = 16.0
margin_right = 4.0
margin_bottom = 16.0

[node name="TextureRect23" type="TextureRect" parent="CapturesDialog/VBoxContainer/GridContainer"]
margin_left = 8.0
margin_top = 16.0
margin_right = 8.0
margin_bottom = 16.0

[node name="TextureRect24" type="TextureRect" parent="CapturesDialog/VBoxContainer/GridContainer"]
margin_left = 12.0
margin_top = 16.0
margin_right = 12.0
margin_bottom = 16.0

[node name="TextureRect25" type="TextureRect" parent="CapturesDialog/VBoxContainer/GridContainer"]
margin_left = 16.0
margin_top = 16.0
margin_right = 16.0
margin_bottom = 16.0

[node name="TextureRect26" type="TextureRect" parent="CapturesDialog/VBoxContainer/GridContainer"]
margin_top = 20.0
margin_bottom = 20.0

[node name="TextureRect27" type="TextureRect" parent="CapturesDialog/VBoxContainer/GridContainer"]
margin_left = 4.0
margin_top = 20.0
margin_right = 4.0
margin_bottom = 20.0

[node name="TextureRect28" type="TextureRect" parent="CapturesDialog/VBoxContainer/GridContainer"]
margin_left = 8.0
margin_top = 20.0
margin_right = 8.0
margin_bottom = 20.0

[node name="TextureRect29" type="TextureRect" parent="CapturesDialog/VBoxContainer/GridContainer"]
margin_left = 12.0
margin_top = 20.0
margin_right = 12.0
margin_bottom = 20.0

[node name="HBoxContainer" type="HBoxContainer" parent="CapturesDialog/VBoxContainer"]
margin_right = 40.0
margin_bottom = 40.0

[node name="Label" type="Label" parent="CapturesDialog/VBoxContainer/HBoxContainer"]
margin_right = 40.0
margin_bottom = 14.0
text = "frames per second"

[node name="SpinBox" type="SpinBox" parent="CapturesDialog/VBoxContainer/HBoxContainer"]
margin_right = 74.0
margin_bottom = 24.0
min_value = 4.0
max_value = 32.0
value = 8.0

[node name="FileDialog" type="FileDialog" parent="."]
margin_left = 7.0
margin_top = 7.0
margin_right = 505.0
margin_bottom = 385.0

[connection signal="pressed" from="HBoxContainer/ToolBar/Settings" to="." method="_on_Settings_pressed"]
[connection signal="toggled" from="HBoxContainer/ToolBar/OutLineLayer" to="." method="_on_OutLineLayer_toggled"]
[connection signal="toggled" from="HBoxContainer/ToolBar/FillLayer" to="." method="_on_FillLayer_toggled"]
[connection signal="color_changed" from="HBoxContainer/ToolBar/ColorPickerButton" to="." method="_on_ColorPickerButton_color_changed"]
[connection signal="toggled" from="HBoxContainer/ToolBar/SketchLayer" to="." method="_on_SketchLayer_toggled"]
[connection signal="toggled" from="HBoxContainer/ToolBar/SketchVisible" to="." method="_on_SketchVisible_toggled"]
[connection signal="value_changed" from="HBoxContainer/ToolBar/OnionSkinDepth" to="." method="_on_OnionSkinDepth_value_changed"]
[connection signal="pressed" from="HBoxContainer/ToolBar/Undo" to="." method="_on_Undo_pressed"]
[connection signal="pressed" from="HBoxContainer/ToolBar/Redo" to="." method="_on_Redo_pressed"]
[connection signal="tab_changed" from="HBoxContainer/VBoxContainer/FrameTabs" to="." method="_on_FrameTabs_tab_changed"]
[connection signal="tab_close" from="HBoxContainer/VBoxContainer/FrameTabs" to="." method="_on_FrameTabs_tab_close"]
[connection signal="resized" from="HBoxContainer/VBoxContainer/PanelContainer/ScrollContainer" to="." method="_on_ScrollContainer_resized"]
[connection signal="gui_input" from="HBoxContainer/VBoxContainer/PanelContainer/ScrollContainer/CenterContainer/Canvas" to="." method="_on_Canvas_gui_input"]
[connection signal="resized" from="HBoxContainer/VBoxContainer/PanelContainer/ScrollContainer/CenterContainer/Canvas" to="." method="_on_Canvas_resized"]
[connection signal="pressed" from="HBoxContainer/VBoxContainer/HBoxContainer/Play" to="." method="_on_Play_pressed"]
[connection signal="pressed" from="HBoxContainer/VBoxContainer/HBoxContainer/Duplicate" to="." method="_on_Duplicate_pressed"]
[connection signal="pressed" from="HBoxContainer/VBoxContainer/HBoxContainer/Next" to="." method="_on_Next_pressed"]
[connection signal="pressed" from="HBoxContainer/VBoxContainer/HBoxContainer/Add" to="." method="_on_Add_pressed"]
[connection signal="pressed" from="HBoxContainer/VBoxContainer/HBoxContainer/Previous" to="." method="_on_Previous_pressed"]
[connection signal="value_changed" from="HBoxContainer/VBoxContainer/HBoxContainer/FrameSlider" to="." method="_on_FrameSlider_value_changed"]
[connection signal="toggled" from="HBoxContainer/VBoxContainer/HBoxContainer/Loop" to="." method="_on_Loop_toggled"]
[connection signal="timeout" from="FrameTimer" to="." method="_on_Timer_timeout"]
[connection signal="confirmed" from="FreeFrameConfirmationDialog" to="." method="_on_FreeFrameConfirmationDialog_confirmed"]
[connection signal="confirmed" from="ResizeConfirmationDialog" to="." method="_on_ResizeConfirmationDialog_confirmed"]
